:lipstick: correct scrollbar on body

--- a/src/components/Authentication/index.module.scss
+++ b/src/components/Authentication/index.module.scss
@@ -1,53 +1,58 @@
 @import 'styles/colors';
 
-.authPageContainer {
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: inherit;
-}
+.authPage {
+    min-width: 100vw;
+    min-height: 100vh;
 
-.authContainer {
-    min-height: 60%;
-    width: 55%;
-    border-radius: 5px;
-    box-shadow: 0 1px 20px 1px rgba(47, 51, 56, 0.35);
-    display: flex;
-
-    .authElement {
-        padding: 1.5rem 1rem;
-    }
-
-    .authForm {
-        flex: 3;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        color: white;
-        text-align: center;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(10px);
-        border-top-left-radius: 5px;
-        border-bottom-left-radius: 5px;
-    }
-
-    .authRight {        
-        flex: 5;
+    .authPageContainer {
+        background-size: cover;
         display: flex;
         align-items: center;
         justify-content: center;
-        background-color: rgba(41, 41, 41, 0.9);
-        backdrop-filter: blur(10px);
-        border-top-right-radius: 5px;
-        border-bottom-right-radius: 5px;
+        min-height: inherit;
+    }
 
-        .logo {
-            height: auto;
-            width: 45%;
-            cursor: auto;
+    .authContainer {
+        min-height: 60%;
+        width: 55%;
+        border-radius: 5px;
+        box-shadow: 0 1px 20px 1px rgba(47, 51, 56, 0.35);
+        display: flex;
+
+        .authElement {
+            padding: 1.5rem 1rem;
+        }
+
+        .authForm {
+            flex: 3;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            text-align: center;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.9);
+            backdrop-filter: blur(10px);
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+        }
+
+        .authRight {        
+            flex: 5;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            background-color: rgba(41, 41, 41, 0.9);
+            backdrop-filter: blur(10px);
+            border-top-right-radius: 5px;
+            border-bottom-right-radius: 5px;
+
+            .logo {
+                height: auto;
+                width: 45%;
+                cursor: auto;
+            }
         }
     }
 }
