--- a/src/index.scss
+++ b/src/index.scss
@@ -3,8 +3,6 @@
 
 body {
   background: $lc-black;
-  min-width: 100vw;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
